--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "webserver project for udemy",
   "main": "index.js",
   "scripts": {
+    "start":"node ./webserver/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aaron Baldwin",
